--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "fcc-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "An app that does awesome things",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start":"node server.js"
   },
   "engines":{
@@ -19,5 +18,6 @@
   },
   "keywords": [],
   "author": "Amanda Luce",
+
   "license": "ISC"
 }
