--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "url":"https://fcc-backend-lord.herokuapp.com/"
   },
   "dependencies": {
-    "express": "^4.14.0",
-    "moment":"^2.10.2"
+    "express": "^4.14.0"
   },
   "keywords": ["freecodecamp","nodejs","express"],
   "author": "Amanda Luce",
